--- a/MyMainWebMVC/Views/Employee/EmployeeView.cshtml
+++ b/MyMainWebMVC/Views/Employee/EmployeeView.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "EmployeeView";
 }
 
-<h1>Employee</h1>
+<h1 style="color:darkcyan ; font-family:Arial,sans-serif">~Employee</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
@@ -18,7 +18,10 @@
             <th>
                 @Html.DisplayNameFor(model => model.EmpName)
             </th>
-            <th></th>
+            <th>
+                @Html.DisplayNameFor(model => model.Action)
+            </th>
+            </th>
         </tr>
     </thead>
     <tbody>
@@ -32,7 +35,6 @@
             </td>
             <td>
                 @Html.ActionLink("Edit", "Edit", new {  id=item.EmpId  }) |
-                @Html.ActionLink("Details", "Details", new { id=item.EmpId  }) |
                 @Html.ActionLink("Delete", "Delete", new {  id=item.EmpId  })
             </td>
         </tr>
