--- a/MyMainWebMVC/Views/Home/DepartmentView.cshtml
+++ b/MyMainWebMVC/Views/Home/DepartmentView.cshtml
@@ -9,7 +9,7 @@
     }
 </style>
 
-<h1 style="color:darkcyan;font-family:Arial,sans-serif">~Department~</h1>
+<h1 style="color:darkcyan;font-family:Arial,sans-serif;background-color:aquamarine;text-align:center">~Department~</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
@@ -39,8 +39,8 @@
                 @Html.DisplayFor(modelItem => item.DeptName)
             </td>
             <td>
-                <button style="background-color: magenta">@Html.ActionLink("Edit", "Edit", new { id=item.DeptId })</button> |
-                <button style="background-color: red">@Html.ActionLink("Delete", "Delete", new { id = item.DeptId })</button>
+                @Html.ActionLink("Edit", "Edit", new { id=item.DeptId })|
+                @Html.ActionLink("Delete", "Delete", new { id = item.DeptId })
             </td>
                 
         </tr>
