--- a/MyMainWebMVC/Views/EmpDept/EmpDeptView.cshtml
+++ b/MyMainWebMVC/Views/EmpDept/EmpDeptView.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "EmpDeptView";
 }
 
-<h1 style="color:darkcyan;font-family:Arial,sans-serif">~Report</h1>
+<h1 style="color:darkcyan;font-family:Arial,sans-serif;background-color:black;text-align:center">Report</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
