--- a/MyMainWebMVC/Views/Employee/EmployeeView.cshtml
+++ b/MyMainWebMVC/Views/Employee/EmployeeView.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "EmployeeView";
 }
 
-<h1 style="color:darkcyan ; font-family:Arial,sans-serif">~Employee</h1>
+<h1 style="color:white ; font-family:Arial,sans-serif ; background-color:black ; text-align:center">Employee</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
