--- a/MyMainWebMVC/Views/Home/DepartmentView.cshtml
+++ b/MyMainWebMVC/Views/Home/DepartmentView.cshtml
@@ -9,7 +9,7 @@
     }
 </style>
 
-<h1 style="color:darkcyan;font-family:Arial,sans-serif;background-color:aquamarine;text-align:center">~Department~</h1>
+<h1 style="color:white;font-family:Arial,sans-serif;background-color:black;text-align:center">Department</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
